# ipcs

./: .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: lib.rs
apidefs/: Cargo.toml
apidefs/src/: lib.rs
cli/: Cargo.toml  req.json
cli/src/: cli.rs  main.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
examples/capitalize/: Cargo.toml
examples/capitalize/src/: lib.rs
executor/: Cargo.toml
executor/src/: lib.rs
node/: Cargo.toml
node/src/: api.rs  block.rs  lib.rs  prelude.rs
node/src/api/: mod.rs
node/src/net/: mod.rs
node/src/net/workswap/: mod.rs
runtime/: Cargo.toml  README.md
runtime/src/: lib.rs
samplefun/: Cargo.toml
samplefun/src/: lib.rs
util/: ipcs.service
