[workspace]
members = [
"api", "apidefs",
"cli", "codegen",
"executor", "node",
"runtime",
"examples/capitalize"
]

default-members = ["cli"]

[patch.crates-io]
ipcs-apidefs = { path = "./apidefs" }
ipcs-api = { path = "./api" }
ipcs-codegen = { path = "./codegen" }
ipcs-executor = { path = "./executor" }
ipcs-node = { path = "./node" }
ipcs-runtime = { path = "./runtime" }
