[package]
name = "ipcs-api"
version = "0.0.0"
authors = ["Michal Hornicky <mhornick@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.apidefs]
package = "ipcs-apidefs"
path = "../apidefs"

[dependencies]
reqwest = "0.10.7"
url = "2.1.1"
serde = "1.0.114"
serde_json = "1.0.56"
