[package]
name = "ipcs-api"
version = "0.0.2"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "Client for IPCS HTTP API"
license = "MIT"
edition = "2018"

[dependencies.apidefs]
package = "ipcs-apidefs"
version = "0.0.2"

[dependencies]
reqwest = {version = "0.11.3", features = ["json"] }
url = "2.1.1"
serde = "1.0.114"
serde_json = "1.0.56"
