[package]
name = "ipcs-apidefs"
version = "0.0.0"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "API type definitions for IPCS HTTP api"
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
