[package]
name = "ipcs-cli"
version = "0.0.0"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "CLI interface for IPCS"
license = "MIT"
edition = "2018"

[[bin]]
name = "ipcs"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "2"

[dependencies.ipcs-node]
version = "0.0.0"

[dependencies.ipcs-api]
version = "0.0.0"

[dependencies]
tokio = "0.2"
env_logger = "0.7.1"