[package]
name = "ipcs-cli"
version = "0.0.2"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "CLI interface for IPCS"
license = "MIT"
edition = "2018"

[[bin]]
name = "ipcs"
path = "src/main.rs"

[dependencies.clap]
version = "2"

[dependencies.ipcs-node]
version = "0.0.2"

[dependencies.ipcs-api]
version = "0.0.2"

[dependencies]
tokio = "0.2"
env_logger = "0.8.1"