[package]
name = "ipcs-codegen"
version = "0.0.1"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "Shim for generating IPCS entrypoint"
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0.35", features = ["full"] }