[package]
name = "ipcs-executor"
version = "0.1.0"
authors = ["Michal Hornicky <mhornick@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wasmer]
package = "wasmer-runtime"
version = "0.16.0"

[dependencies]
log = "*"