[package]
name = "ipcs-executor"
version = "0.0.2"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "Executor of IPCS functions"
license = "MIT"
edition = "2018"

[dependencies.wasmer]
package = "wasmer-runtime"
version = "0.16.0"

[dependencies]
log = "0.4.11"
anyhow = "1.0.32"