[package]
name = "ipcs-node"
version = "0.0.1"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "IPCS worker node - provides HTTP API & uses libp2p for communication"
license = "MIT"
edition = "2018"

[dependencies.ipfsapi]
package = "semtexzv-ipfsapi"
version = "0.4.1-alpha.1"

[dependencies.executor]
package = "ipcs-executor"
version = "0.0.1"

[dependencies.apidefs]
package = "ipcs-apidefs"
version = "0.0.1"

[dependencies.libp2p]
default-features = false
version = "=0.22.0"
features = [
"deflate",
"dns",
"floodsub",
"identify",
"kad",
"gossipsub",
"mdns",
"mplex",
"noise",
"ping",
"plaintext",
"pnet",
"request-response",
"secio",
"secp256k1",
"tcp-tokio",
#"tcp-async-std",
"wasm-ext",
"websocket",
"yamux",
]

[dependencies]
warp = "0.2"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.56"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "blocking", "macros"] }
futures = "0.3.5"
bytes = "0.5.6"
libc = "0.2.73"
log = "0.4.11"
multihash = "0.11.2"
hamming = "0.1.3"
bs58 = "0.3.1"