[package]
name = "ipcs-node"
version = "0.0.3"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "IPCS worker node - provides HTTP API & uses libp2p for communication"
license = "MIT"
edition = "2018"

[dependencies.executor]
package = "ipcs-executor"
version = "0.0.3"

[dependencies.apidefs]
package = "ipcs-apidefs"
version = "0.0.3"

[dependencies.libp2p]
default-features = false
version = "=0.28.1"
features = [
"deflate",
"dns",
#"floodsub",
"identify",
"kad",
#"gossipsub",
"mdns-tokio",
"mplex",
"noise",
"ping",
"plaintext",
"pnet",
"request-response",
"secp256k1",
"tcp-tokio",
#"wasm-ext",
"websocket",
"yamux",
]

[dependencies.bitswap]
package = "libp2p-bitswap"
version = "*"

[dependencies.cid]
package = "tiny-cid"
version = "*"

[dependencies.multihash]
package = "tiny-multihash"
version = "*"

[dependencies]
anyhow = "1.0.32"
void = "1.0.2"
warp = "0.2"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.56"
serde_with = "*"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "blocking", "macros"] }
futures = "0.3.5"
bytes = "0.5.6"
libc = "0.2.73"
log = "0.4.11"

hamming = "0.1.3"
bs58 = "0.3.1"