[package]
name = "ipcs-node"
version = "0.0.2"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "IPCS worker node - provides HTTP API & uses libp2p for communication"
license = "MIT"
edition = "2018"

[dependencies.ipfs]
version = "*"

[dependencies.executor]
package = "ipcs-executor"
version = "0.0.2"

[dependencies.apidefs]
package = "ipcs-apidefs"
version = "0.0.2"

[dependencies.astd]
package = "async-std"
version = "1.6.5"
features = ["attributes", "alloc", "std", "tokio02"]

[dependencies]
anyhow = "1.0.32"
void = "1.0.2"
tide = "*"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.56"
futures = "0.3.5"
bytes = "0.6.0"
libc = "0.2.73"
log = "0.4.11"
multihash = "0.11.2"
cid = "0.5.1"
hamming = "0.1.3"
bs58 = "0.3.1"