[package]
name = "ipcs-runtime"
version = "0.0.0"
authors = ["Michal Hornicky <mhornick@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.codegen]
package = "ipcs-codegen"
path = "../codegen"

[dependencies]
