[package]
name = "ipcs-runtime"
version = "0.0.0"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "Runtime shim for IPCS functions written in rust"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.codegen]
package = "ipcs-codegen"
version = "0.0.0"

[dependencies]
