[package]
name = "capitalize"
version = "0.1.0"
authors = ["Michal Hornicky <mhornick@redhat.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies.ipcs]
package = "ipcs-runtime"
version = "0.0.0"

[dependencies]
